{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 36,
  "lineage": "7abe421c-a7a1-cd3f-3aff-1ddf06160592",
  "resources": [
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_for_nat_gw",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b50c45996538b7b",
            "associate_with_private_ip": "10.0.2.0/24",
            "association_id": "eipassoc-0fbf6a60d7fd68f7a",
            "domain": "vpc",
            "id": "eipalloc-09b50c45996538b7b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-064475d294916ab9b",
            "private_dns": "ip-10-0-1-46.us-west-2.compute.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-35-160-100-208.us-west-2.compute.amazonaws.com",
            "public_ip": "35.160.100.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Qa-EIP"
            },
            "tags_all": {
              "Name": "Qa-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00be885d550dcee43",
            "arn": "arn:aws:ec2:us-west-2:301411450872:instance/i-09e12b14f3762e933",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e12b14f3762e933",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-first-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c96b573d6f9eceba",
            "private_dns": "ip-10-0-1-82.us-west-2.compute.internal",
            "private_ip": "10.0.1.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079c42d70ffffc3f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03680d468fc26aac8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de19b5bda631169c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03680d468fc26aac8"
            ]
          },
          "dependencies": [
            "module.vpc_networking.aws_security_group.ec2-security-group",
            "module.vpc_networking.aws_subnet.module_public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:internet-gateway/igw-018973f299eeb1fdb",
            "id": "igw-018973f299eeb1fdb",
            "owner_id": "301411450872",
            "tags": {
              "Name": "Qa-IGW"
            },
            "tags_all": {
              "Name": "Qa-IGW"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gatway",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b50c45996538b7b",
            "connectivity_type": "public",
            "id": "nat-0c0f272ab343746f4",
            "network_interface_id": "eni-064475d294916ab9b",
            "private_ip": "10.0.1.46",
            "public_ip": "35.160.100.208",
            "subnet_id": "subnet-0de19b5bda631169c",
            "tags": {
              "Name": "Qa-Nat-Gw"
            },
            "tags_all": {
              "Name": "Qa-Nat-Gw"
            }
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.elastic_ip_for_nat_gw",
            "module.vpc_networking.aws_subnet.module_public_subnet_1",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018973f299eeb1fdb",
            "id": "r-rtb-02a64e3c610dd585c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a64e3c610dd585c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.internet_gateway",
            "module.vpc_networking.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d53e2ab149d44101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c0f272ab343746f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_eip.elastic_ip_for_nat_gw",
            "module.vpc_networking.aws_nat_gateway.nat_gatway",
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_public_subnet_1",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:route-table/rtb-08d53e2ab149d4410",
            "id": "rtb-08d53e2ab149d4410",
            "owner_id": "301411450872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0f272ab343746f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route-Table"
            },
            "tags_all": {
              "Name": "Private_Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:route-table/rtb-02a64e3c610dd585c",
            "id": "rtb-02a64e3c610dd585c",
            "owner_id": "301411450872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014594bdce8439059",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-08349ad3aa1cf17cf"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_1",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05763b370fea3cc7e",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-061dba40e447296dd"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_2",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13170b47b1add07",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-02bc756633d70e901"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_3",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_4_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c35264b25dbbe62b",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-0dba3798a4ccba93b"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_4",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_5_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07078ae6968218170",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-0f7c1a5a10cfd859d"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_5",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_6_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2298a035b84f9f0",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-037a880251bc29b24"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_6",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_7_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec76cb67b7b9383",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-0b0839e2d91649114"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_7",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_8_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005af664dc1e73121",
            "route_table_id": "rtb-08d53e2ab149d4410",
            "subnet_id": "subnet-0c337a5a8290e91c5"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.private_route_table",
            "module.vpc_networking.aws_subnet.module_private_subnet_8",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09878142da6161278",
            "route_table_id": "rtb-02a64e3c610dd585c",
            "subnet_id": "subnet-0de19b5bda631169c"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.public_route_table",
            "module.vpc_networking.aws_subnet.module_public_subnet_1",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03535b9f265ffd03c",
            "route_table_id": "rtb-02a64e3c610dd585c",
            "subnet_id": "subnet-094590de5851cc4f3"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.public_route_table",
            "module.vpc_networking.aws_subnet.module_public_subnet_2",
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-security-group",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:security-group/sg-03680d468fc26aac8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03680d468fc26aac8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2-instance-SG",
            "name_prefix": "",
            "owner_id": "301411450872",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_1",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-08349ad3aa1cf17cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08349ad3aa1cf17cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_2",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-061dba40e447296dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-061dba40e447296dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_3",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-02bc756633d70e901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02bc756633d70e901",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-3"
            },
            "tags_all": {
              "Name": "Private-Subnet-3"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_4",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-0dba3798a4ccba93b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0dba3798a4ccba93b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-4"
            },
            "tags_all": {
              "Name": "Private-Subnet-4"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_5",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-0f7c1a5a10cfd859d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0f7c1a5a10cfd859d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-5"
            },
            "tags_all": {
              "Name": "Private-Subnet-5"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_6",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-037a880251bc29b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-037a880251bc29b24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-6"
            },
            "tags_all": {
              "Name": "Private-Subnet-6"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_7",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-0b0839e2d91649114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-0b0839e2d91649114",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-7"
            },
            "tags_all": {
              "Name": "Private-Subnet-7"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnet_8",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-0c337a5a8290e91c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0c337a5a8290e91c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Private-Subnet-8"
            },
            "tags_all": {
              "Name": "Private-Subnet-8"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_public_subnet_1",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-0de19b5bda631169c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0de19b5bda631169c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_public_subnet_2",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:subnet/subnet-094590de5851cc4f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-094590de5851cc4f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301411450872",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0bc9e35504d40d51a"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "module_vpc",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:301411450872:vpc/vpc-0bc9e35504d40d51a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041d8cde4715a31a7",
            "default_route_table_id": "rtb-06f317ed7172ecfdd",
            "default_security_group_id": "sg-06e9cb5df364a0339",
            "dhcp_options_id": "dopt-000fc8cc5f050cd5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bc9e35504d40d51a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f317ed7172ecfdd",
            "owner_id": "301411450872",
            "tags": {
              "Name": "Qa-VPC"
            },
            "tags_all": {
              "Name": "Qa-VPC"
            }
          }
        }
      ]
    }
  ]
}